--- a/main.css
+++ b/main.css
@@ -14,6 +14,10 @@ body {
 }
 #header {
 	margin-bottom: 2rem;
+	background-image: url('assets/misc/landscape-header.jpg');
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
 }
 #social a:hover {
 	opacity: 0.7;
@@ -21,15 +25,11 @@ body {
 #youtube-video {
 	margin-top: 2rem;
 }
-#youtube-video img {
-	height: 300px;
-	width: 500px;
-}
 #product-description p {
-	line-height: 2.0;
+	line-height: 2.5;
 }
 #features ul {
-	line-height: 2.0;
+	line-height: 2.5;
 }
 #buy-now button {
 	width: 100%;
