--- a/main.css
+++ b/main.css
@@ -8,16 +8,26 @@ body {
 	background-size: cover;
 	color: white;
 }
+.dropcloth {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 300px;
+	background-color: rgba(0,0,0,0.6);
+}
 #header img {
 	height: 300px;
 	width: 300px;
 }
 #header {
 	margin-bottom: 2rem;
-	background-image: url('assets/misc/landscape-header.jpg');
+	background-image: url('assets/misc/london.jpg');
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
+	position: relative;
+	height: 300px;
 }
 #social a:hover {
 	opacity: 0.7;
