--- a/main.css
+++ b/main.css
@@ -2,38 +2,29 @@
 /* NOTE: Do not edit the Bootstrap CSS files. */
 
 body {
-	background-image: url('assets/misc/dirt-background.jpg');
-	background-position: center;
-	background-repeat: no-repeat;
-	background-size: cover;
-	color: white;
-}
-.dropcloth {
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 300px;
-	background-color: rgba(0,0,0,0.6);
-}
-#header img {
-	height: 300px;
-	width: 300px;
-}
-#header {
-	margin-bottom: 2rem;
 	background-image: url('assets/misc/london.jpg');
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
-	position: relative;
+	background-attachment: fixed;
+	min-height: 100%;
+	color: white;
+}
+#api-logo {
 	height: 300px;
+	width: 300px;
+}
+#header {
+	height: 350px;
 }
 #social a:hover {
 	opacity: 0.7;
 }
-#youtube-video {
-	margin-top: 2rem;
+#main-body {
+	background-image: url('assets/misc/grey-wood.jpg');
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
 }
 #product-description p {
 	line-height: 2.5;
@@ -43,7 +34,6 @@ body {
 }
 #buy-now button {
 	width: 100%;
-	margin: 2rem 0;
 }
 #contact-info img {
 	width: 100%;
@@ -51,4 +41,11 @@ body {
 }
 #contact-info p{
 	line-height: 4.5;
+}
+#description-video,
+#carousel-features,
+#steps-testimonials,
+#call-action {
+	margin-top: 4rem;
+	margin-bottom: 4rem;
 }
