--- a/main.css
+++ b/main.css
@@ -10,14 +10,18 @@ nav a {
 	background-repeat: no-repeat;
 	background-position: center;
 	display: inline-block;
-	width: 100px;
-	height: 25px;
+	width: 150px;
+	height: 50px;
+}
+nav h1 {
+	margin: 0;
+}
+.navbar {
+	margin-bottom: 0;
+	border-radius: 0;
 }
 #main-body {
-	background-image: url('assets/misc/grey-wood.jpg');
-	background-position: center;
-	background-repeat: no-repeat;
-	background-size: cover;
+	background: #222222;
 	padding-top: 4rem;
 }
 #youtube-video {
