--- a/main.css
+++ b/main.css
@@ -1,9 +1,6 @@
 /* Styles for Product Page Customization */
 /* NOTE: Do not edit the Bootstrap CSS files. */
 
-body {
-	color: white;
-}
 nav a {
 	background-image: url('assets/logos/api_superstore_logo_by.png');
 	background-size: contain;
@@ -21,8 +18,14 @@ nav h1 {
 	border-radius: 0;
 }
 #main-body {
-	background: #222222;
 	padding-top: 4rem;
+	background: lightgray;
+}
+#product-description,
+#features,
+#testimonials {
+	margin-top: 5rem;
+	margin-bottom: 5rem;
 }
 #youtube-video {
 	margin-top: 2rem;
@@ -37,10 +40,16 @@ nav h1 {
 #features ul {
 	line-height: 2.5;
 }
+#contact-info {
+	border-top: 2px solid grey;
+	padding-top: 3rem;
+}
 #contact-info img {
-	width: 100%;
-	height: auto;
+	width: 250px;
+	height: 50px;
 }
 #contact-info p{
+	display: inline-block;
 	line-height: 4.5;
+	margin-right: 3rem;
 }
